# imagebot

./: .env.default  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/: config.py  dependencies.py  main.py
backend/api/database/: connection.py  models.py
backend/api/logic/: exceptions.py  jwt_logic.py  user_logic.py
backend/api/routes/: authentication.py  upload.py
backend/api/shared/: file_types.py
backend/api/utils/: image_validate.py
backend/api/workers/: tasks.py
